LAB 7.1 Update