@@ -5,19 +5,16 @@ import com.example.mylab.counter.RequestCounter;
 import com.example.mylab.model.Person;
 import com.example.mylab.repository.PersonRepository;
 import com.example.mylab.service.PersonService;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -35,121 +32,81 @@ class PersonServiceTest {
     @InjectMocks
     private PersonService personService;
 
-    private Person testPerson;
-
-    @BeforeEach
-    void setUp() {
-        testPerson = mock(Person.class);
-        when(testPerson.getId()).thenReturn(1);
-        when(testPerson.getName()).thenReturn("Timur");
-        when(testPerson.getSurname()).thenReturn("Panov");
-    }
-
     @Test
-    void findAll_ShouldReturnCachedPersons_WhenCacheExists() {
-        when(commonCache.get("all_persons", List.class))
-                .thenReturn(Collections.singletonList(testPerson));
+    void findAll_ShouldReturnPersonsFromCache_WhenCacheExists() {
+        List<Person> cachedPersons = List.of(new Person("Ivan", "Ivanov"));
+        when(commonCache.get("all_persons", List.class)).thenReturn(cachedPersons);
 
         List<Person> result = personService.findAll();
 
         assertEquals(1, result.size());
+        verify(commonCache).get("all_persons", List.class);
         verify(personRepository, never()).findAll();
+    }
+
+    @Test
+    void findAll_ShouldFetchFromDbAndCache_WhenCacheEmpty() {
+        List<Person> dbPersons = List.of(new Person("Ivan", "Ivanov"));
+        when(commonCache.get("all_persons", List.class)).thenReturn(null);
+        when(personRepository.findAll()).thenReturn(dbPersons);
+
+        List<Person> result = personService.findAll();
+
+        assertEquals(1, result.size());
+        verify(commonCache).put("all_persons", dbPersons);
         verify(requestCounter).increment("PersonService.findAll");
     }
 
     @Test
     void findById_ShouldReturnCachedPerson_WhenExistsInCache() {
-        when(commonCache.getById("persons", 1, Person.class))
-                .thenReturn(testPerson);
+        Person cachedPerson = new Person("Ivan", "Ivanov");
+        when(commonCache.getById("persons", 1, Person.class)).thenReturn(cachedPerson);
 
         Optional<Person> result = personService.findById(1);
 
         assertTrue(result.isPresent());
-        assertEquals(testPerson, result.get());
-        verify(personRepository, never()).findById(anyInt());
+        assertEquals("Ivan", result.get().getName());
+        verify(personRepository, never()).findById(any());
     }
 
     @Test
-    void create_ShouldSaveNewPerson_AndUpdateCache() {
-        when(personRepository.save(any(Person.class))).thenReturn(testPerson);
+    void create_ShouldSavePersonAndInvalidateCache() {
+        Person newPerson = new Person("Timur", "Panov");
+        Person savedPerson = new Person("Timur", "Panov");
 
-        Person result = personService.create(testPerson);
+        when(personRepository.save(newPerson)).thenReturn(savedPerson);
 
-        assertNotNull(result);
-        verify(commonCache).putWithId("persons", 1, testPerson);
+        Person result = personService.create(newPerson);
+
+        assertEquals(1, result.getId());
+        verify(commonCache).putWithId("persons", 1, savedPerson);
         verify(commonCache).put("all_persons", null);
+        verify(requestCounter).increment("PersonService.create");
     }
 
     @Test
-    void update_ShouldModifyExistingPerson_AndClearCache() {
-        Person updatedDetails = mock(Person.class);
-        when(updatedDetails.getName()).thenReturn("Updated");
-        when(updatedDetails.getSurname()).thenReturn("User");
+    void update_ShouldUpdatePersonAndCache() {
+        Person existingPerson = new Person("Ivan", "Ivanov");
+        Person updatedDetails = new Person("Ivan", "Updated");
 
-        when(personRepository.findById(1)).thenReturn(Optional.of(testPerson));
-        when(personRepository.save(any(Person.class))).thenReturn(testPerson);
+        when(personRepository.findById(1)).thenReturn(Optional.of(existingPerson));
+        when(personRepository.save(existingPerson)).thenReturn(updatedDetails);
 
         Person result = personService.update(1, updatedDetails);
 
-        assertEquals("Updated", testPerson.getName());
+        assertEquals("Updated", result.getSurname());
         verify(commonCache).removeById("persons", 1);
-        verify(commonCache).put("all_persons", null);
+        verify(commonCache).putWithId("persons", 1, updatedDetails);
     }
 
     @Test
-    void delete_ShouldRemovePerson_AndClearCache() {
-        when(personRepository.findById(1)).thenReturn(Optional.of(testPerson));
+    void delete_ShouldRemovePersonAndCache() {
+        Person personToDelete = new Person("Ivan", "Ivanov");
+        when(personRepository.findById(1)).thenReturn(Optional.of(personToDelete));
 
         personService.delete(1);
 
+        verify(commonCache).removeById("persons", 1);
         verify(personRepository).deleteById(1);
-        verify(commonCache).removeById("persons", 1);
-    }
-
-    @Test
-    void findByCountryName_ShouldReturnCachedResults_WhenAvailable() {
-        String countryName = "Belarus";
-        String cacheKey = "persons_by_country_" + countryName;
-        when(commonCache.get(cacheKey, List.class))
-                .thenReturn(Collections.singletonList(testPerson));
-
-        List<Person> result = personService.findByCountryName(countryName);
-
-        assertEquals(1, result.size());
-        verify(personRepository, never()).findPersonsByCountryName(anyString());
-    }
-
-    @Test
-    void bulkOperations_ShouldWorkCorrectly() {
-        when(personRepository.save(any(Person.class))).thenReturn(testPerson);
-        List<Person> created = personService.createAll(Collections.singletonList(testPerson));
-        assertEquals(1, created.size());
-
-        Person update = mock(Person.class);
-        when(update.getId()).thenReturn(1);
-        when(update.getName()).thenReturn("Updated");
-        when(personRepository.findById(1)).thenReturn(Optional.of(testPerson));
-
-        List<Person> updated = personService.updateAll(Collections.singletonList(update));
-        assertEquals(1, updated.size());
-
-        personService.deleteAll(Collections.singletonList(1));
-        verify(personRepository).deleteAllById(anyList());
-    }
-
-    @Test
-    void shouldIncrementCounter_ForAllOperations() {
-        when(personRepository.save(any())).thenReturn(testPerson);
-        when(personRepository.findById(1)).thenReturn(Optional.of(testPerson));
-        when(commonCache.get(anyString(), any())).thenReturn(null);
-
-        personService.findAll();
-        personService.findById(1);
-        personService.create(testPerson);
-        personService.update(1, testPerson);
-        personService.delete(1);
-        personService.findByCountryName("Belarus");
-
-        verify(requestCounter, times(6)).increment(anyString());
     }
 }
